fix: add yarn on docker
Signed-off-by: Arthur Novaes <arthurnovaes9@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
     build: .
     depends_on:
       - db
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "yarn install --check-files && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - .:/app
     ports:
       - "3000:3000"
     volumes:
