--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,13 @@
+AllCops:
+  Exclude:
+    - 'node_modules/**/*'
+    - 'tmp/**/*'
+    - 'vendor/**/*'
+    - '.git/**/*'
+    - 'bin/**/*'
+
 Style/Documentation:
   Enabled: false 
-  
+
 Style/FrozenStringLiteralComment:
   Enabled: false
