--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "jquery": "^3.5.1",
+    "jquery-ui-dist": "^1.12.1",
     "tailwindcss": "^1.8.11",
     "turbolinks": "^5.2.0"
   },
