--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 version: '3'
 services:
   db:
+    hostname: db
     image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-
+    ports:
+      - "8001:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=councilman_management
+      - POSTGRES_DB=councilman_management_test
   app:
     build: .
     depends_on:
